--- a/libBase/build.gradle
+++ b/libBase/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.library'
 // classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 17
@@ -29,9 +29,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/tbs_sdk_thirdapp_v3.1.0.1034_43100.jar')
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:multidex:1.0.3'
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.25'
     compile 'com.google.code.gson:gson:2.8.1'
@@ -67,7 +68,6 @@ dependencies {
     //进度条Dialog
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     compile files('libs/zip4j_1.3.2.jar')
-    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.bigkoo:svprogresshud:1.0.6'
     //友盟统计
     compile 'com.umeng.analytics:analytics:latest.integration'
