--- a/libBase/build.gradle
+++ b/libBase/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'org.greenrobot.greendao'
 
 // In your root build.gradle file:
 // classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
@@ -24,6 +25,16 @@ android {
         mavenCentral()
     }
 
+}
+
+greendao {
+    //schemaVersion：指定数据库schema版本号，可以理解为数据库版本号 迁移等操作会用到；
+    //daoPackage：通过gradle插件生成的数据库相关文件的包名，设置DaoMaster 、DaoSession、Dao的包名
+    //targetGenDir：设置DaoMaster 、DaoSession、Dao的目录
+    //              而不是build中，这样就不用额外的设置资源目录了。
+    schemaVersion 1
+    daoPackage 'com.kwan.base.mvp.model.db.gen'
+    targetGenDir 'src/main/java'
 }
 
 dependencies {
@@ -69,6 +80,7 @@ dependencies {
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     compile files('libs/zip4j_1.3.2.jar')
     compile 'com.bigkoo:svprogresshud:1.0.6'
+    compile 'org.greenrobot:greendao:3.2.2'
     //友盟统计
     compile 'com.umeng.analytics:analytics:latest.integration'
 }
