--- a/libBase/src/main/AndroidManifest.xml
+++ b/libBase/src/main/AndroidManifest.xml
@@ -2,46 +2,6 @@
 <manifest package="com.kwan.base"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--普通权限 注册即可-->
-    <!--android.permission.ACCESS_LOCATION_EXTRA_COMMANDS-->
-    <!--android.permission.ACCESS_NETWORK_STATE-->
-    <!--android.permission.ACCESS_NOTIFICATION_POLICY-->
-    <!--android.permission.ACCESS_WIFI_STATE-->
-    <!--android.permission.ACCESS_WIMAX_STATE-->
-    <!--android.permission.BLUETOOTH-->
-    <!--android.permission.BLUETOOTH_ADMIN-->
-    <!--android.permission.BROADCAST_STICKY-->
-    <!--android.permission.CHANGE_NETWORK_STATE-->
-    <!--android.permission.CHANGE_WIFI_MULTICAST_STATE-->
-    <!--android.permission.CHANGE_WIFI_STATE-->
-    <!--android.permission.CHANGE_WIMAX_STATE-->
-    <!--android.permission.DISABLE_KEYGUARD-->
-    <!--android.permission.EXPAND_STATUS_BAR-->
-    <!--android.permission.FLASHLIGHT-->
-    <!--android.permission.GET_ACCOUNTS-->
-    <!--android.permission.GET_PACKAGE_SIZE-->
-    <!--android.permission.INTERNET-->
-    <!--android.permission.KILL_BACKGROUND_PROCESSES-->
-    <!--android.permission.MODIFY_AUDIO_SETTINGS-->
-    <!--android.permission.NFC-->
-    <!--android.permission.READ_SYNC_SETTINGS-->
-    <!--android.permission.READ_SYNC_STATS-->
-    <!--android.permission.RECEIVE_BOOT_COMPLETED-->
-    <!--android.permission.REORDER_TASKS-->
-    <!--android.permission.REQUEST_INSTALL_PACKAGES-->
-    <!--android.permission.SET_TIME_ZONE-->
-    <!--android.permission.SET_WALLPAPER-->
-    <!--android.permission.SET_WALLPAPER_HINTS-->
-    <!--android.permission.SUBSCRIBED_FEEDS_READ-->
-    <!--android.permission.TRANSMIT_IR-->
-    <!--android.permission.USE_FINGERPRINT-->
-    <!--android.permission.VIBRATE-->
-    <!--android.permission.WAKE_LOCK-->
-    <!--android.permission.WRITE_SYNC_SETTINGS-->
-    <!--com.android.alarm.permission.SET_ALARM-->
-    <!--com.android.launcher.permission.INSTALL_SHORTCUT-->
-    <!--com.android.launcher.permission.UNINSTALL_SHORTCUT-->
-
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
@@ -86,8 +46,8 @@
             android:name="design_height"
             android:value="1334"/>
 
-        <activity android:name=".camera2.CameraDemoActivity">
-        </activity>
+        <activity android:name=".camera2.CameraDemoActivity"/>
+        <service android:name=".common.service.VersionUpdateService"/>
     </application>
 
 </manifest>
